# split-the-bills

./: .env-sample  README.md  main.py  pyproject.toml  requirements.txt  test_main.py
.github/workflows/: pylint.yml
