[project]
name = "split-the-bills"
version = "0.2.0"
description = "A script to automate splitting monthly bills between two partners. Makes use of Sure and Jira, and can be automated with something like Kestra."
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pydantic==2.12.5", "requests==2.32.5", "tqdm==4.67.3"]

[dependency-groups]
dev = ["pylint>=4.0.4", "pytest>=9.0.2", "types-tqdm==4.67.3.20260205"]


[tool.pylint."messages control"]
# Only show warnings with the listed confidence levels. Leave empty to show all.
# Valid levels: HIGH, CONTROL_FLOW, INFERENCE, INFERENCE_FAILURE, UNDEFINED.
confidence = [
    "HIGH",
    "CONTROL_FLOW",
    "INFERENCE",
    "INFERENCE_FAILURE",
    "UNDEFINED",
]

# Disable the message, report, category or checker with the given id(s). You can
# either give multiple identifiers separated by comma (,) or put this option
# multiple times (only on the command line, not in the configuration file where
# it should appear only once). You can also use "--disable=all" to disable
# everything first and then re-enable specific checks. For example, if you want
# to run only the similarities checker, you can use "--disable=all
# --enable=similarities". If you want to run only the classes checker, but have
# no Warning level messages displayed, use "--disable=all --enable=classes
# --disable=W".
disable = [
    "missing-function-docstring",
    "too-few-public-methods",
    "broad-exception-caught",
    "too-many-public-methods",
    "too-many-arguments",
    "trailing-newlines",
    "line-too-long",
    "trailing-whitespace",
    "too-many-locals",
    "fixme",
    "no-member",
]


# Enable the message, report, category or checker with the given id(s). You can
# either give multiple identifier separated by comma (,) or put this option
# multiple time (only on the command line, not in the configuration file where it
# should appear only once). See also the "--disable" option for examples.
enable = ["c-extension-no-member"]
